<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/display_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical">

        <!-- Calculation Numbers -->
        <TextView
            android:id="@+id/txt_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="2+7"
            android:textColor="@color/white"
            android:textSize="50sp" />


        <!-- Result -->
        <TextView
            android:id="@+id/txt_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="9"
            android:textColor="@color/grey"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"


            >
            <!-- Back space -->
            <ImageView
                android:id="@+id/btn_backspace"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/white"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="300dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/backspace"

                />


        </LinearLayout>


        <!-- Divider -->
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider_color"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            />


        <!-- Buttons -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:columnCount="4"
            android:rowCount="5"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card_clear"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:textColor="@color/black"
                android:background="@color/magenta"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                android:text="@string/c"
                android:textSize="40sp"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="2"
                    android:background="@color/magenta"
                    android:gravity="center"
                    android:text="@string/c"

                    android:textColor="@color/black"
                    android:textSize="50sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_percentage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:background="@color/magenta"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/percent"
                    android:background="@color/divider_color"
                    android:gravity="center"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:layout_columnWeight="1"
                    android:padding="20dp"

                    />

            </androidx.cardview.widget.CardView> --.

            <androidx.cardview.widget.CardView
                android:id="@+id/card_division"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@color/black"
                android:background="@color/magenta"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="20dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:src="@drawable/division"
                    android:background="@color/white"
                    android:gravity="center"
                    android:layout_rowWeight="1"
                    android:layout_columnSpan="1"
                    android:padding="2dp"

                    />

            </androidx.cardview.widget.CardView>


            <!-- 7 to 9-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/seven"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/eight"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_9"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/nine"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_multiply"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/btnoperatorcolor"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="x"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>

            <!-- 4 to 6-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/four"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/five"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/six"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_minus"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/btnoperatorcolor"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>

            <!-- 1 to 3-->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/two"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/three"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_btn_add"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:background="@color/btnbgcolor"
                android:layout_rowWeight="1"
                android:layout_columnSpan="1"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/btnoperatorcolor"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="+"
                    android:textSize="50sp"

                    />

            </androidx.cardview.widget.CardView>


            <!-- 0 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="2"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="@string/zero"

                    android:textColor="@color/white"
                    android:textSize="50sp" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_equal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="2"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="2"
                    android:background="@color/btnbgcolor"
                    android:gravity="center"
                    android:text="="

                    android:textColor="@color/white"
                    android:textSize="50sp" />

            </androidx.cardview.widget.CardView>


        </GridLayout>









    </LinearLayout>







</RelativeLayout>